# kfp-workflow

./: .gitignore  AGENTS.md  CLI_COMMAND_TREE.md  DOCS.md  GEMINI.md  Makefile  OPERATIONS.md  PROJECT.md  README.md  pyproject.toml
configs/benchmarks/: mambasl_cmapss_kepler_smoke.yaml  mambasl_cmapss_test.yaml  sample_benchmark.yaml
configs/benchmarks/metrics/: cmapss_test_fd001.yaml  kepler_predictor_energy.yaml
configs/benchmarks/scenarios/: mambasl_cmapss_test_fd001.yaml  mambasl_cmapss_timeseries_smoke.yaml
configs/pipelines/: mambasl_cmapss_fd1.yaml  mambasl_cmapss_smoke.yaml  mrhysp_cmapss_smoke.yaml  sample_train.yaml  softs_cmapss_smoke.yaml
configs/serving/: mambasl_cmapss_serve.yaml  mrhysp_cmapss_serve.yaml  sample_serve.yaml  softs_cmapss_serve.yaml
configs/tuning/: mambasl_cmapss_tune.yaml  mrhysp_cmapss_tune.yaml  softs_cmapss_tune.yaml
docker/: Dockerfile
examples/: 00_프로젝트_개요.md  01_설치_및_설정.md  02_스펙_파일_작성_및_검증.md  03_파이프라인_컴파일_및_제출.md  04_파이프라인_실행_모니터링.md  05_CLI_설정_오버라이드.md  06_서빙_배포_및_추론.md  07_레지스트리_관리.md  08_클러스터_부트스트랩.md  09_Docker_이미지_빌드.md  10_새_모델_플러그인_개발.md  11_하이퍼파라미터_튜닝.md  12_벤치마크_워크플로우.md  README.md
kubeflow/pvc/: dataset-pvc.yaml  model-pvc.yaml
models/mambasl-new/: .gitignore  OPERATIONS.md  PROJECT.md  README.md  pyproject.toml
models/mambasl-new/tests/: test_kubeflow_protocol.py  test_pipeline_compile.py  test_specs.py
models/multirocket-new/: .gitignore  Dockerfile  Makefile  OPERATIONS.md  PROJECT.md  README.md  UI_WORKFLOW_UNIFICATION.md  pyproject.toml
models/multirocket-new/configs/experiments/: fd001_smoke.yaml  fd_all_core_aggressive.yaml  fd_all_core_default.yaml
models/multirocket-new/configs/search_spaces/: aggressive.yaml  default.yaml
models/multirocket-new/kubeflow/katib/: README.md
models/multirocket-new/kubeflow/pvc/: cmapss-data-pvc.yaml  cmapss-results-pvc.yaml
models/multirocket-new/pipelines/: README.md
models/multirocket-new/scripts/: build_image.sh
models/multirocket-new/src/multirocket_new/: __init__.py  cmapss.py  config.py  experiment.py  model.py  runner.py  search_space.py  specs.py  utils.py
models/multirocket-new/src/multirocket_new/cli/: main.py
models/multirocket-new/src/multirocket_new/kubeflow/: __init__.py  bootstrap.py  client.py  katib.py  pipeline.py
models/multirocket-new/tests/: test_cli_protocol.py  test_compile_and_render.py  test_model_compat.py  test_specs.py
models/softs-new/: .gitignore  Makefile  OPERATIONS.md  PROJECT.md  README.md  pyproject.toml
models/softs-new/configs/experiments/: fd001_smoke.yaml  fd_all_core_aggressive.yaml  fd_all_core_default.yaml
models/softs-new/configs/search_spaces/: aggressive.yaml  default.yaml
models/softs-new/kubeflow/katib/: README.md
models/softs-new/pipelines/: README.md
models/softs-new/src/softs_new/: __init__.py  specs.py  utils.py
models/softs-new/src/softs_new/cli/: __init__.py  main.py
models/softs-new/src/softs_new/cmapss/: __init__.py  constants.py  data.py  experiment.py  model.py  preprocess.py  search_space.py  windowing.py
models/softs-new/src/softs_new/kubeflow/: __init__.py  katib.py  pipeline.py
models/softs-new/src/softs_new/softs_layers/: __init__.py  softs.py
models/softs-new/tests/: test_kubeflow_protocol.py  test_pipeline_compile.py  test_specs.py
models/timemixer-new/: Makefile  OPERATIONS.md  PROJECT.md  README.md  pyproject.toml
models/timemixer-new/tests/: test_kubeflow_protocol.py  test_pipeline_compile.py  test_specs.py
pipelines/: README.md
scripts/: build_image.sh  load_image_to_cluster.sh
src/kfp_workflow/: __init__.py  config_override.py  specs.py  utils.py
src/kfp_workflow/benchmark/: __init__.py  client.py  compiler.py  components.py  history.py  interfaces.py  materialize.py  runtime.py
src/kfp_workflow/cli/: main.py  output.py  workflows.py
src/kfp_workflow/components/: __init__.py  evaluate.py  load_data.py  preprocess.py  save_model.py  train.py
tests/: test_benchmark_compile.py  test_benchmark_history.py  test_benchmark_runtime.py  test_cli_protocol.py  test_cli_run_commands.py  test_config_fixtures.py  test_config_override.py  test_kfp_component_serialization.py  test_load_data_component.py  test_output.py  test_pipeline_compile.py  test_plugin_system.py  test_registry.py  test_serving_kserve_api.py  test_serving_predictor.py  test_spec_validate_cli.py  test_specs.py  test_tune_history.py  test_tune_katib.py
(+68 files in other folders)
