[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfp-workflow"
version = "0.1.0"
description = "Integrated Kubeflow workflow manager for pipelines, serving, tuning, benchmarks, registry, and storage bootstrap"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "einops>=0.8,<0.9",
    "kfp[kubernetes]==2.15.0",
    "kubernetes>=29,<31",
    "numpy>=1.26,<2",
    "optuna>=4.5,<5",
    "pandas>=2.2,<2.3",
    "pydantic>=2.7,<3",
    "PyYAML>=6,<7",
    "requests>=2.31,<3",
    "scikit-learn>=1.3,<1.6",
    "torch>=2.4,<2.6",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
serving = [
    "kserve==0.17.0",
]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
kfp-workflow = "kfp_workflow.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
